--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Un <b>site web</b> est un ensemble de pages qui peuvent être consultées en suivant des hyperliens à l'intérieur du site. L'adresse web d'un site correspond en fait à l'URL d'une page web, prévue pour être la première consultée : la page d'accueil. 
                 La consultation des pages d'un site s'appelle une <strong>« visite »</strong>, car les hyperliens devraient permettre de consulter toutes les pages du site sans le quitter (sans devoir consulter une page web hors du site). Une visite peut commencer par n'importe quelle page, particulièrement lorsque son URL est donnée par un moteur de recherche. Techniquement, rien ne distingue la page d'accueil d'une autre page. 
             </div><br>
-            <p><a href="image.png"><img src="image_mini.png" alt="Image Structure"/></a>
+            <p><a href="./assets/imgs/image.png"><img src="./assets/imgs/image_mini.png" alt="Image Structure"/></a>
         <br>
             Source:<a href="https://fr.wikipedia.org/wiki/Site_web">Wikipédia</a>
             </p>
@@ -55,7 +55,7 @@
             </div>
             <p> <strong><h5 style="color: #0000ff;">Découpage du prix d’un site internet</h5></strong>
             Une technique simple pour découper le budget d’un site internet est la suivante :</p>
-            <p><a href="imageprix.jpg"><img src="imageprix_mini.jpg" alt="Image des prix"/></a> </p>
+            <p><a href="./assets/imgs/imageprix.jpg"><img src="./assets/imgs/imageprix_mini.jpg" alt="Image des prix"/></a> </p>
         <br>
             <h4><div id="Différents types">Les Différents types de sites</div></h4>
             <h5><div id="Sites statiques">Sites statiques</h5>
