--- a/index.html
+++ b/index.html
@@ -6,74 +6,54 @@
     <link rel="index.html" href="CSS">
 </head>
 <body>
-    <h1 style="color:red;">Bienvenue sur ma première page web en html</h1> <hr>
-        <p>Venez découvrir mon tout premier site internet avec moi.<br>Nous allons découvrir qu'est-ce qu'un site internet.</p>
+    <h1 style="color:red;">Bienvenue sur ma première page web en html</h1>
+    <p>Venez découvrir mon tout premier site internet avec moi.<br>Nous allons découvrir qu'est-ce qu'un site internet.</p>
     <h3>Sommaire</h3>
-        <ol>
-            <li><a href="#Définition">Définition d'un site internet</a></li>
-            <li><a href="#Histoire">Son histoire</a></li>
-            <li><a href="#Structure">Sa structure</a></li>
-            <li><a href="#Conclusion">Conclusion</a></li>
-        </ol>
-        <br>
-            <h4><div id="Définition">Définition</h4>
-                Un site web, ou simplement <b>site</b>, est un ensemble de pages web et de ressources reliées par des hyperliens, défini et accessible par une adresse web. Un site est hébergé sur un serveur web accessible via le réseau mondial internet, un intranet local ou encore depuis le serveur web lui-même. L'ensemble des sites web constituent le <mark>World Wide Web</mark>. 
-            </div>
-        <br>
-            <h4><div id="Histoire">Son histoire</h4>
-                Le <b>World Wide Web</b> (WWW) a été créé en 1989 par l’ingénieur anglais du CERN <i>Tim Berners-Lee</i>. Le web a été essentiellement conçu pour partager automatiquement des informations entre les scientifiques, universités et instituts du monde entier. info.cern.ch fut le premier site web mis en ligne, fonctionnant sur un ordinateur NeXT au CERN. Ce site est toujours accessible par internet1. Le premier site web français est créé en 1992 au CNRS2. A cette période, il existe seulement 26 sites web3.
-                Avant l’introduction de HTML et HTTP, d’autres protocoles tels que FTP et Gopher étaient utilisés pour obtenir des fichiers depuis un serveur. Ces protocoles offraient une organisation hiérarchique de répertoires dans lesquels l’utilisateur naviguait et choisissait les fichiers à télécharger. Les documents étaient principalement des fichiers texte sans mise en page et des fichiers encodés par un traitement de texte. 
-            </div>
-        <br>
-            <h4><div id="Structure">Sa structure</h4>
-                Un <b>site web</b> est un ensemble de pages qui peuvent être consultées en suivant des hyperliens à l'intérieur du site. L'adresse web d'un site correspond en fait à l'URL d'une page web, prévue pour être la première consultée : la page d'accueil. 
-                La consultation des pages d'un site s'appelle une <strong>« visite »</strong>, car les hyperliens devraient permettre de consulter toutes les pages du site sans le quitter (sans devoir consulter une page web hors du site). Une visite peut commencer par n'importe quelle page, particulièrement lorsque son URL est donnée par un moteur de recherche. Techniquement, rien ne distingue la page d'accueil d'une autre page. 
-            </div><br>
-            <p><a href="./assets/imgs/image.png"><img src="./assets/imgs/image_mini.png" alt="Image Structure"/></a>
-        <br>
-            Source:<a href="https://fr.wikipedia.org/wiki/Site_web">Wikipédia</a>
-            </p>
-        <br>
-            <h4><div id="Conclusion">Conclusion</h4>
-            Un site est donc un ensemble de pages Web accessibles via Internet sur un serveur identifié par une adresse.
-            </div>
-            <p>Nous allons voir plus d'informations sur la création d'un site web.</p>
-        <ol>
-            <li><a href="#Prix">Les prix</a></li>
-            <li><a href="#Différents types">Les différents types de sites</a></li>
+    <ol>
+        <li><a href="#Définition">Définition d'un site internet</a></li>
+        <li><a href="#Histoire">Son histoire</a></li>
+        <li><a href="#Structure">Sa structure</a></li>
+        <li><a href="#Conclusion">Conclusion</a></li>
+    </ol>
+    <h4 id="Définition">Définition</h4>
+    <p>Un site web, ou simplement <strong>site</strong>, est un ensemble de pages web et de ressources reliées par des hyperliens, défini et accessible par une adresse web. Un site est hébergé sur un serveur web accessible via le réseau mondial internet, un intranet local ou encore depuis le serveur web lui-même. L'ensemble des sites web constituent le <mark>World Wide Web</mark>.</p>
+    <h4 id="Histoire">Son histoire</h4>
+    <p>Le <strong>World strongide Web</b> (WWW) a été créé en 1989 par l’ingénieur anglais du CERN <i>Tim Berners-Lee</i>. Le web a été essentiellement conçu pour partager automatiquement des informations entre les scientifiques, universités et instituts du monde entier. info.cern.ch fut le premier site web mis en ligne, fonctionnant sur un ordinateur NeXT au CERN. Ce site est toujours accessible par internet1. Le premier site web français est créé en 1992 au CNRS2. A cette période, il existe seulement 26 sites web3.<br>
+    Avant l’introduction de HTML et HTTP, d’autres protocoles tels que FTP et Gopher étaient utilisés pour obtenir des fichiers depuis un serveur. Ces protocoles offraient une organisation hiérarchique de répertoires dans lesquels l’utilisateur naviguait et choisissait les fichiers à télécharger. Les documents étaient principalement des fichiers texte sans mise en page et des fichiers encodés par un traitement de texte.</p>
+    <h4 id="Structure">Sa structure</h4>
+    <p>Un <strong>site wstrongb</b> est un ensemble de pages qui peuvent être consultées en suivant des hyperliens à l'intérieur du site. L'adresse web d'un site correspond en fait à l'URL d'une page web, prévue pour être la première consultée : la page d'accueil.<br>
+    La consultation des pages d'un site s'appelle une <strong>« visite »</strong>, car les hyperliens devraient permettre de consulter toutes les pages du site sans le quitter (sans devoir consulter une page web hors du site). Une visite peut commencer par n'importe quelle page, particulièrement lorsque son URL est donnée par un moteur de recherche. Techniquement, rien ne distingue la page d'accueil d'une autre page.<br>
+    <a href="./assets/imgs/image.png"><img src="./assets/imgs/image_mini.png" alt="Image Structure"/></a><br>
+    Source: <a href="https://fr.wikipedia.org/wiki/Site_web">Wikipédia</a>
+    </p>
+    <h4 id="Conclusion">Conclusion</h4>
+    <p>Un site est donc un ensemble de pages Web accessibles via Internet sur un serveur identifié par une adresse.<br>
+        Nous allons voir plus d'informations sur la création d'un site web.</p>
+    <ol>
+        <li><a href="#Prix">Les prix</a></li>
+        <li><a href="#Différents types">Les différents types de sites</a></li>
         <ul>
             <li><a href="#Sites statiques">Sites statiques</a></li>
             <li><a href="#Sites dynamiques">Sites dynamiques</a></li>
         </ul>
-        </ol>
-        <br>
-            <h4><div id="Prix">Les prix</h4>
-            Selon vous,le prix d'une création d'un site web est de <ins>_____</ins>£<!--Commentaire-->
-        <br>
-            <p style="background-color: rgb(255,99,71)">La réponse</p>
-            La majorité des sites Web d’entreprises coûteront entre <strong> 1 500 € et 20 000 €.</strong>
-            </div>
-            <p> <strong><h5 style="color: #0000ff;">Découpage du prix d’un site internet</h5></strong>
-            Une technique simple pour découper le budget d’un site internet est la suivante :</p>
-            <p><a href="./assets/imgs/imageprix.jpg"><img src="./assets/imgs/imageprix_mini.jpg" alt="Image des prix"/></a> </p>
-        <br>
-            <h4><div id="Différents types">Les Différents types de sites</div></h4>
-            <h5><div id="Sites statiques">Sites statiques</h5>
-            Ces sites ont le mécanisme de fonctionnement le plus simple : les URL correspondent à un fichier renvoyé par le serveur web. Le contenu des pages d'un site statique ne dépend donc pas de variables telles que la date ou de bases de données. Pour changer le contenu d'une page, il est nécessaire de changer le contenu du fichier.
-            En outre, les visiteurs peuvent seulement voir le contenu du site mais pas y participer. Pour les réaliser, seuls les langages dits d'interface utilisateur (frontend) sont nécessaires, c'est-à-dire HTML, CSS et JavaScript (en théorie, il est toutefois possible d'utiliser uniquement le HTML). 
-            </div>
-        <br>
-            <h5><div id="Sites dynamiques">Sites dynamiques</h5>
-                Ces sites offrent un contenu qui peut évoluer dans le temps. Des programmes tournent du côté des serveurs, à l'arrière plan, (backend) pour générer les pages du site. Ces programmes peuvent se servir de bases de données ou autres sources de données pour composer les pages qui seront affichées dans le navigateur.
-                Ce dynamisme apporte des fonctionnalités que ne peuvent pas offrir les sites dits statiques. Par exemple les visiteurs peuvent y participer (commentaires sur un blog, changement du contenu des pages d'un wiki...). Ils ont donc pratiquement supplanté les sites statiques au début des années 2000.
-                Pour les réaliser, on a également besoin de HTML, de CSS et de JavaScript, mais les programmes qui tournent du côté serveur utilisent d'autres langages qui peuvent créer dynamiquement les pages, en analysant les requêtes des visiteurs pour ensuite fabriquer une réponse adaptée.
-                Il existe plusieurs langages pour créer ces pages : PHP, Java, C#, Ruby, voire d'autres comme C++, Python et Visual Basic via l'interface CGI.
-                Leur temps de chargement est généralement plus long que pour les pages statiques, toutefois il est possible d'obtenir des valeurs proches en stockant les pages dynamiques déjà appelées dans une mémoire cache, qui les réaffichera plus vite. 
-            </div>
-        <br>
-            <p> Source:<a href="https://www.sergentweb.com/guide-sur-les-prix-de-creation-d-un-site-internet/en-conclusion-combien-coute-donc-un-site-web/" title="Sergentweb" target="_blank">Sergentweb</a></p>
-        <br>
-            
+    </ol>
+    <h4 id="Prix">Les prix</h4>
+    <p style="background-color: rgb(255,99,71)">Selon vous,le prix d'une création d'un site web est de <ins>_____</ins>£<!--Commentaire--><br>
+    La réponse<br>
+    La majorité des sites Web d’entreprises coûteront entre <strong> 1 500 € et 20 000 €.</strong><br>
+    <strong><h5 style="color: #0000ff;">Découpage du prix d’un site internet</h5></strong>
+    <p>Une technique simple pour découper le budget d’un site internet est la suivante :<br>
+    <a href="./assets/imgs/imageprix.jpg"><img src="./assets/imgs/imageprix_mini.jpg" alt="Image des prix"/></a></p>
+    <h4 id="Différents types">Les Différents types de sites</h4>
+    <h5 id="Sites statiques">Sites statiques</h5>
+    <p>Ces sites ont le mécanisme de fonctionnement le plus simple : les URL correspondent à un fichier renvoyé par le serveur web. Le contenu des pages d'un site statique ne dépend donc pas de variables telles que la date ou de bases de données. Pour changer le contenu d'une page, il est nécessaire de changer le contenu du fichier.<br>
+    En outre, les visiteurs peuvent seulement voir le contenu du site mais pas y participer. Pour les réaliser, seuls les langages dits d'interface utilisateur (frontend) sont nécessaires, c'est-à-dire HTML, CSS et JavaScript (en théorie, il est toutefois possible d'utiliser uniquement le HTML). </p>
+    <h5 id="Sites dynamiques">Sites dynamiques</h5>
+    <p> Ces sites offrent un contenu qui peut évoluer dans le temps. Des programmes tournent du côté des serveurs, à l'arrière plan, (backend) pour générer les pages du site. Ces programmes peuvent se servir de bases de données ou autres sources de données pour composer les pages qui seront affichées dans le navigateur.<br>
+    Ce dynamisme apporte des fonctionnalités que ne peuvent pas offrir les sites dits statiques. Par exemple les visiteurs peuvent y participer (commentaires sur un blog, changement du contenu des pages d'un wiki...). Ils ont donc pratiquement supplanté les sites statiques au début des années 2000.<br>
+    Pour les réaliser, on a également besoin de HTML, de CSS et de JavaScript, mais les programmes qui tournent du côté serveur utilisent d'autres langages qui peuvent créer dynamiquement les pages, en analysant les requêtes des visiteurs pour ensuite fabriquer une réponse adaptée.<br>
+    Il existe plusieurs langages pour créer ces pages : PHP, Java, C#, Ruby, voire d'autres comme C++, Python et Visual Basic via l'interface CGI.<br>
+    Leur temps de chargement est généralement plus long que pour les pages statiques, toutefois il est possible d'obtenir des valeurs proches en stockant les pages dynamiques déjà appelées dans une mémoire cache, qui les réaffichera plus vite.</p> 
+    <p> Source:<a href="https://www.sergentweb.com/guide-sur-les-prix-de-creation-d-un-site-internet/en-conclusion-combien-coute-donc-un-site-web/" title="Sergentweb" target="_blank">Sergentweb</a></p>
 </body>
-
 </html>
