--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Ma page</title>
-    <link rel="index.html" href="CSS">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/master.css">
+
 </head>
 <body>
-    <h1 style="color:red;">Bienvenue sur ma première page web en html</h1>
+    <h1>Bienvenue sur ma première page web en html</h1>
     <p>Venez découvrir mon tout premier site internet avec moi.<br>Nous allons découvrir qu'est-ce qu'un site internet.</p>
     <h3>Sommaire</h3>
     <ol>
@@ -15,17 +17,23 @@
         <li><a href="#Structure">Sa structure</a></li>
         <li><a href="#Conclusion">Conclusion</a></li>
     </ol>
-    <h4 id="Définition">Définition</h4>
-    <p>Un site web, ou simplement <strong>site</strong>, est un ensemble de pages web et de ressources reliées par des hyperliens, défini et accessible par une adresse web. Un site est hébergé sur un serveur web accessible via le réseau mondial internet, un intranet local ou encore depuis le serveur web lui-même. L'ensemble des sites web constituent le <mark>World Wide Web</mark>.</p>
-    <h4 id="Histoire">Son histoire</h4>
-    <p>Le <strong>World strongide Web</b> (WWW) a été créé en 1989 par l’ingénieur anglais du CERN <i>Tim Berners-Lee</i>. Le web a été essentiellement conçu pour partager automatiquement des informations entre les scientifiques, universités et instituts du monde entier. info.cern.ch fut le premier site web mis en ligne, fonctionnant sur un ordinateur NeXT au CERN. Ce site est toujours accessible par internet1. Le premier site web français est créé en 1992 au CNRS2. A cette période, il existe seulement 26 sites web3.<br>
-    Avant l’introduction de HTML et HTTP, d’autres protocoles tels que FTP et Gopher étaient utilisés pour obtenir des fichiers depuis un serveur. Ces protocoles offraient une organisation hiérarchique de répertoires dans lesquels l’utilisateur naviguait et choisissait les fichiers à télécharger. Les documents étaient principalement des fichiers texte sans mise en page et des fichiers encodés par un traitement de texte.</p>
-    <h4 id="Structure">Sa structure</h4>
-    <p>Un <strong>site wstrongb</b> est un ensemble de pages qui peuvent être consultées en suivant des hyperliens à l'intérieur du site. L'adresse web d'un site correspond en fait à l'URL d'une page web, prévue pour être la première consultée : la page d'accueil.<br>
-    La consultation des pages d'un site s'appelle une <strong>« visite »</strong>, car les hyperliens devraient permettre de consulter toutes les pages du site sans le quitter (sans devoir consulter une page web hors du site). Une visite peut commencer par n'importe quelle page, particulièrement lorsque son URL est donnée par un moteur de recherche. Techniquement, rien ne distingue la page d'accueil d'une autre page.<br>
-    <a href="./assets/imgs/image.png"><img src="./assets/imgs/image_mini.png" alt="Image Structure"/></a><br>
-    Source: <a href="https://fr.wikipedia.org/wiki/Site_web">Wikipédia</a>
-    </p>
+    <section>
+        <h4 id="Définition">Définition</h4>
+        <p>Un site web, ou simplement <strong>site</strong>, est un ensemble de pages web et de ressources reliées par des hyperliens, défini et accessible par une adresse web. Un site est hébergé sur un serveur web accessible via le réseau mondial internet, un intranet local ou encore depuis le serveur web lui-même. L'ensemble des sites web constituent le <mark>World Wide Web</mark>.</p>
+    </section>
+    <section>   
+        <h4 id="Histoire">Son histoire</h4>
+        <p>Le <strong>World strongide Web</strong> (WWW) a été créé en 1989 par l’ingénieur anglais du CERN <i>Tim Berners-Lee</i>. Le web a été essentiellement conçu pour partager automatiquement des informations entre les scientifiques, universités et instituts du monde entier. info.cern.ch fut le premier site web mis en ligne, fonctionnant sur un ordinateur NeXT au CERN. Ce site est toujours accessible par internet1. Le premier site web français est créé en 1992 au CNRS2. A cette période, il existe seulement 26 sites web3.<br>
+        Avant l’introduction de HTML et HTTP, d’autres protocoles tels que FTP et Gopher étaient utilisés pour obtenir des fichiers depuis un serveur. Ces protocoles offraient une organisation hiérarchique de répertoires dans lesquels l’utilisateur naviguait et choisissait les fichiers à télécharger. Les documents étaient principalement des fichiers texte sans mise en page et des fichiers encodés par un traitement de texte.</p>
+    </section>
+    <section>
+        <h4 id="Structure">Sa structure</h4>
+        <p>Un <strong>site</strong> est un ensemble de pages qui peuvent être consultées en suivant des hyperliens à l'intérieur du site. L'adresse web d'un site correspond en fait à l'URL d'une page web, prévue pour être la première consultée : la page d'accueil.<br>
+        La consultation des pages d'un site s'appelle une <strong>« visite »</strong>, car les hyperliens devraient permettre de consulter toutes les pages  du site sans le quitter (sans devoir consulter une page web hors du site). Une visite peut commencer par n'importe quelle page, particulièrement lorsque son URL est donnée par un moteur de recherche. Techniquement, rien ne distingue la page d'accueil d'une autre page.<br>
+        <a href="./assets/imgs/image.png"><img src="./assets/imgs/image_mini.png" alt="Image Structure"/></a><br>
+        Source: <a href="https://fr.wikipedia.org/wiki/Site_web">Wikipédia</a>
+        </p>
+    </section>
     <h4 id="Conclusion">Conclusion</h4>
     <p>Un site est donc un ensemble de pages Web accessibles via Internet sur un serveur identifié par une adresse.<br>
         Nous allons voir plus d'informations sur la création d'un site web.</p>
