--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
     </ol>
     <h4 id="Prix">Les prix</h4>
-    <p style="background-color: rgb(255,99,71)">Selon vous,le prix d'une création d'un site web est de <ins>_____</ins>£<!--Commentaire--><br>
+    <p>Selon vous,le prix d'une création d'un site web est de <ins>_____</ins>£<!--Commentaire--><br>
     La réponse<br>
     La majorité des sites Web d’entreprises coûteront entre <strong> 1 500 € et 20 000 €.</strong><br>
     <strong><h5 style="color: #0000ff;">Découpage du prix d’un site internet</h5></strong>
@@ -57,7 +57,7 @@
     <p>Ces sites ont le mécanisme de fonctionnement le plus simple : les URL correspondent à un fichier renvoyé par le serveur web. Le contenu des pages d'un site statique ne dépend donc pas de variables telles que la date ou de bases de données. Pour changer le contenu d'une page, il est nécessaire de changer le contenu du fichier.<br>
     En outre, les visiteurs peuvent seulement voir le contenu du site mais pas y participer. Pour les réaliser, seuls les langages dits d'interface utilisateur (frontend) sont nécessaires, c'est-à-dire HTML, CSS et JavaScript (en théorie, il est toutefois possible d'utiliser uniquement le HTML). </p>
     <h5 id="Sites dynamiques">Sites dynamiques</h5>
-    <p> Ces sites offrent un contenu qui peut évoluer dans le temps. Des programmes tournent du côté des serveurs, à l'arrière plan, (backend) pour générer les pages du site. Ces programmes peuvent se servir de bases de données ou autres sources de données pour composer les pages qui seront affichées dans le navigateur.<br>
+    <p> Les sites offrent un contenu qui peut évoluer dans le temps. Des programmes tournent du côté des serveurs, à l'arrière plan, (backend) pour générer les pages du site. Ces programmes peuvent se servir de bases de données ou autres sources de données pour composer les pages qui seront affichées dans le navigateur.<br>
     Ce dynamisme apporte des fonctionnalités que ne peuvent pas offrir les sites dits statiques. Par exemple les visiteurs peuvent y participer (commentaires sur un blog, changement du contenu des pages d'un wiki...). Ils ont donc pratiquement supplanté les sites statiques au début des années 2000.<br>
     Pour les réaliser, on a également besoin de HTML, de CSS et de JavaScript, mais les programmes qui tournent du côté serveur utilisent d'autres langages qui peuvent créer dynamiquement les pages, en analysant les requêtes des visiteurs pour ensuite fabriquer une réponse adaptée.<br>
     Il existe plusieurs langages pour créer ces pages : PHP, Java, C#, Ruby, voire d'autres comme C++, Python et Visual Basic via l'interface CGI.<br>
