--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Bienvenue sur ma première page web en html</h1>
-    <p>Venez découvrir mon tout premier site internet avec moi.<br>Nous allons découvrir qu'est-ce qu'un site internet.</p>
+    <p>Venez découvrir mon tout premier site internet avec moi.Nous allons découvrir qu'est-ce qu'un site internet.</p>
     <h3>Sommaire</h3>
     <ol>
         <li><a href="#Définition">Définition d'un site internet</a></li>
@@ -49,7 +49,7 @@
     <p>Selon vous,le prix d'une création d'un site web est de <ins>_____</ins>£<!--Commentaire--><br>
     La réponse<br>
     La majorité des sites Web d’entreprises coûteront entre <strong> 1 500 € et 20 000 €.</strong><br>
-    <strong><h5 style="color: #0000ff;">Découpage du prix d’un site internet</h5></strong>
+    <strong><h5> Découpage du prix d’un site internet</h5></strong>
     <p>Une technique simple pour découper le budget d’un site internet est la suivante :<br>
     <a href="./assets/imgs/imageprix.jpg"><img src="./assets/imgs/imageprix_mini.jpg" alt="Image des prix"/></a></p>
     <h4 id="Différents types">Les Différents types de sites</h4>
